<resources>
    <string name="app_name">Turisteandov2</string>
    <string name="resenahoteles">
       Bienvenido/a a la seccion de hoteles, encontraras una gran variedad, podras filtrar segun tus necesidades y escogeras¡la mejor opcion para ti!
    </string>
    <string name="resenarestaurantes">
        Bienvenido/a a la seccion de restaurantes, encontraras una gran variedad, podras filtrar segun tus necesidades y escogeras¡la mejor opcion para ti!
    </string>
    <string name="resenasitios">
        Bienvenido/a a la seccion de sitios, encontraras una gran variedad, podras filtrar segun tus necesidades y escogeras¡la mejor opcion para ti!
    </string>
    <string name="usuariologin">Usuario
    </string>
    <string name="passwordlogin">Contraseña
    </string>
    <string name="opcion1">Ingles</string>
    <string name="opcion2">Español</string>
    <string name="opcion3">Italiano</string>
    <string name="opcion4">Sobre nosotros</string>
    <string name="bienvenidohome">Bienvenido</string>
    <string name="ingresarlog">Ingresar</string>
    <string name="boton1home">Hoteles</string>
    <string name="boton2home">Restaurantes</string>
    <string name="boton3home">Sitios</string>
    <string name="descripcionacerca">¡Hola! Mi nombre es Mariana, tengo 16 años y actualmente soy estudiante de Desarrollo de Software y Diseño Interactivo. Me considero apasionada por aprender cada día algo nuevo. Me desenvuelvo muy bien en el campo de las comunicaciones y el arte, me gusta afrontar retos, ser servicial en cada paso que doy y trato de que con pequeñas acciones pueda comenzar un gran cambio en la sociedad.
    </string>
    <string name="contacto">Contacto</string>
    <string name="platorecomendado">Plato recomendado</string>
    <string name="precio">Precio</string>
    <string name="reservar">¡Reservar!</string>
    <string name="descripcionhotel1">Un lujoso hotel frente al mar con habitaciones elegantes, vistas panorámicas, gastronomía exquisita y servicios de primera clase para relajación inolvidable.</string>
    <string name="calificacion">Calificacion</string>
    <string name="descripcionrestaurante">Un restaurante en La Guajira que fusiona sabores autóctonos con creatividad, ofreciendo platos frescos y una experiencia gastronómica cultural única.</string>
</resources>