<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:id="@+id/BannerTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/sitiosbanner"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth="800dp"
        app:layout_constraintHeight="35dp"
        />
    <ImageView
        android:id="@+id/icono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/BannerTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/perfil"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth="120dp"
        app:layout_constraintHeight="120dp"
        />
    <EditText
        android:id="@+id/usuario"
        app:layout_constraintTop_toBottomOf="@+id/icono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
       android:hint="@string/usuariologin"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        />
    <EditText
        android:id="@+id/contrasena"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/passwordlogin"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textColor="@color/color1"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <ImageView
        android:id="@+id/logoface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth="64dp" />

    <ImageView
        android:id="@+id/logogoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/social"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth="64dp" />

    <ImageView
        android:id="@+id/logogit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/github"
        app:flow_horizontalBias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth="64dp" />
    <Button
        android:id="@+id/botoningresar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:backgroundTint="@color/color5"
        android:text="@string/ingresarlog"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/tituloo"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintWidth="60dp"
        app:layout_constraintHeight="60dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>