<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmpliandoHotel">

    <TextView
        android:id="@+id/titulohotelampliando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Hotel Wayira Beach"
        android:textColor="@color/color1"
        android:textStyle="bold"
        android:textSize="25dp"
        app:layout_constraintVertical_bias="0.05"
        />

    <ImageView
        android:id="@+id/fotohotelampliando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/titulohotelampliando"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/wayiraampliando"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth="420dp"
        app:layout_constraintHeight="190dp"
        />

    <TextView
        android:id="@+id/contacotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:textColor="@color/color1"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotohotelampliando"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/preciohotelampliando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$100.000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preciotitulo"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/numeroampliandohotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="313513897"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacotitulo"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/preciotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textColor="@color/color1"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotohotelampliando"
        app:layout_constraintVertical_bias="0.024" />


    <TextView
        android:id="@+id/descripcionhotelampliando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/descripcionhotel1"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preciohotelampliando"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/imagenhotel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wayirahotel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionhotelampliando"
        app:layout_constraintVertical_bias="0.103"
        app:layout_constraintWidth="140dp" />

    <ImageView
        android:id="@+id/imagenhotel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wayira3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionhotelampliando"
        app:layout_constraintVertical_bias="0.103"
        app:layout_constraintWidth="110dp" />

    <TextView
        android:id="@+id/comentarioampliandohotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="40dp"
        android:text="Es un hotel muy agradable con muchas alternativas y perfecto para la familia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toEndOf="@+id/iconoperfil"
        app:layout_constraintTop_toBottomOf="@+id/imagenhotel1"
        app:layout_constraintVertical_bias="0.161" />

    <ImageView
        android:id="@+id/iconoperfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/perfilnaranja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenhotel1"
        app:layout_constraintVertical_bias="0.112"
        app:layout_constraintWidth="60dp" />

    <ImageView
        android:id="@+id/comillas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/comillas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="20dp"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenhotel1"
        app:layout_constraintVertical_bias="0.151"
        app:layout_constraintWidth="20dp" />


    <TextView
        android:id="@+id/calificaciontitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calificacion"
        android:textColor="@color/color1"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoperfil"
        app:layout_constraintVertical_bias="0.124" />

    <ImageView
        android:id="@+id/estrellas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/estrellass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="50dp"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comillas"
        app:layout_constraintVertical_bias="0.239"
        app:layout_constraintWidth="50dp" />

    <TextView
        android:id="@+id/calificaionampliandohotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5/5"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comentarioampliandohotel"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/botonreservarhotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/color1"
        android:text="@string/reservar"
        android:textColor="@color/color7"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estrellas"
        app:layout_constraintVertical_bias="0.391" />

</androidx.constraintlayout.widget.ConstraintLayout>