<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmpliandoRestaurante">
    <TextView
        android:id="@+id/titulorestampliando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Estrella del mar"
        android:textColor="@color/color2"
        android:textStyle="bold"
        android:textSize="25dp"
        app:layout_constraintVertical_bias="0.05"
        />
    <ImageView
        android:id="@+id/fotorestampliando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/titulorestampliando"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/estrelladelmar"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth="420dp"
        app:layout_constraintHeight="190dp"
        />

    <TextView
        android:id="@+id/numerorestampliando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="313513897"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacotitulo"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/preciorestampliando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$20.000 - $40.000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preciotitulo"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/preciotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textColor="@color/color2"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotorestampliando"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/contacotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:textColor="@color/color2"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotorestampliando"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/platorecomendadotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/platorecomendado"
        android:textColor="@color/color2"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numerorestampliando"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/platorecomendado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Robalo"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numerorestampliando"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/descripcionrestampliando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="252dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/platorecomendado"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imagenrest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fotorest2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="80dp"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionrestampliando"
        app:layout_constraintVertical_bias="0.142"
        app:layout_constraintWidth="110dp" />

    <ImageView
        android:id="@+id/imagenrest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fotorest1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="80dp"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionrestampliando"
        app:layout_constraintVertical_bias="0.142"
        app:layout_constraintWidth="110dp" />

    <ImageView
        android:id="@+id/imagenrest3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fotorest3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="80dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionrestampliando"
        app:layout_constraintVertical_bias="0.142"
        app:layout_constraintWidth="110dp" />

    <Button
        android:id="@+id/botonreservarrest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/color2"
        android:text="@string/reservar"
        android:textColor="@color/color6"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenrest1"
        app:layout_constraintVertical_bias="0.34" />

</androidx.constraintlayout.widget.ConstraintLayout>