<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmpliandoSitios">
    <TextView
        android:id="@+id/titulositios1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Pilon de azucar"
        android:textColor="@color/color3"
        android:textStyle="bold"
        android:textSize="25dp"
        app:layout_constraintVertical_bias="0.05"
        />
    <ImageView
        android:id="@+id/fotositios1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/titulositios1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/pilon"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth="420dp"
        app:layout_constraintHeight="240dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="313513897"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacotitulo"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/contacotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:textColor="@color/color3"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotositios1"
        app:layout_constraintVertical_bias="0.02" />
    <TextView
        android:id="@+id/preciotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textColor="@color/color3"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotositios1"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/preciositios1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$100.000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preciotitulo"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/descripcionsitios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preciositios1"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/imagensitios1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wayirahotel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionsitios"
        app:layout_constraintVertical_bias="0.084"
        app:layout_constraintWidth="140dp" />

    <ImageView
        android:id="@+id/imagensitios2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wayira2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionsitios"
        app:layout_constraintVertical_bias="0.089"
        app:layout_constraintWidth="110dp" />

    <ImageView
        android:id="@+id/imagensitios3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wayira5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="130dp"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionsitios"
        app:layout_constraintVertical_bias="0.125"
        app:layout_constraintWidth="70dp" />

    <ImageView
        android:id="@+id/imagensitios4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wayira1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionsitios"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth="140dp" />

    <ImageView
        android:id="@+id/imagensitios5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wayira3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="60dp"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionsitios"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth="110dp" />
    <Button
        android:id="@+id/botonreservarsitios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imagensitios5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintVertical_bias="0.3"
        android:backgroundTint="@color/color3"
        android:text="@string/reservar"
        android:textStyle="bold"
        android:textColor="@color/color4"
        />
</androidx.constraintlayout.widget.ConstraintLayout>